--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,25 @@
 body {
-  background-color: #dadada;
-  font-size: 10px;
+  background-color: #white;
+  font-size: 14px;
+}
+
+.container {
+  width: 30%;
+  background-color: #DFDEE0;
+  margin: 20%;
+  padding-right: 10%;
+}
+
+.container h1 {
+  margin-top: 90%;
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 50px;
+  padding-left: 20px;
+  width: 100%;
+}
+/* Left off trying to add image background*/
+.previewbaku {
+  background-image: url(../images/baku.jpg);
+  width: 133%;
 }
