--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@ body {
 }
 
 .container h1 {
-  margin-top: 90%;
+  margin-top: 80%;
   text-align: center;
-  padding-top: 25px;
+  padding-top: 5px;
   padding-bottom: 50px;
   padding-left: 20px;
   width: 100%;
@@ -22,6 +22,12 @@ body {
 
 /* image added, need to fix height*/
 .previewbaku {
+  width: 125.5%;
   background-image: url(../images/baku.jpg);
-  width: 133%;
+  background-size: cover;
+  padding: 15px;
+}
+
+.h1 {
+  font-size: 200px;
 }
