--- a/css/style.css
+++ b/css/style.css
@@ -3,31 +3,30 @@ body {
   font-size: 14px;
 }
 
+.title {
+padding: 5% 25% 5% 20%;
+font-size: 20px;
+width: 100%;
+text-transform: uppercase;
+}
+
 .container {
-  width: 30%;
   background-color: #DFDEE0;
-  margin: 20%;
-  padding-right: 10%;
+  margin: 15%;
 }
 
-.container h1 {
-  margin-top: 80%;
-  text-align: center;
-  padding-top: 5px;
-  padding-bottom: 50px;
-  padding-left: 20px;
-  width: 100%;
-  text-transform: uppercase;
-}
-
-/* image added, need to fix height*/
 .previewbaku {
-  width: 125.5%;
-  background-image: url(../images/baku.jpg);
-  background-size: cover;
-  padding: 15px;
+  margin:auto 15%;
 }
 
-.h1 {
-  font-size: 200px;
+.previewlondon {
+  margin: auto 15%;
+}
+
+.previewmadrid {
+  margin: auto 15%;
+}
+
+.previewrome {
+  margin: auto 15%;
 }
