--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,19 @@
 body {
   background-color: #white;
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .title {
-padding: 5% 25% 5% 20%;
+padding: 10%;
+text-align: center;
 font-size: 20px;
-width: 100%;
 text-transform: uppercase;
 }
 
 .container {
   background-color: #DFDEE0;
-  margin: 15%;
+  margin: 35%;
 }
 
 .previewbaku {
