--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,16 @@ body {
   background-color: #white;
   font-size: 18px;
   font-weight: bold;
+  font-family:sans-serif;
+  display: block;
+
 }
 
+@media screen and (min-width: 575px){
+   .div {
+    margin: 1%;
+    width: 48%;
+  }
 .title {
 padding: 10%;
 text-align: center;
@@ -17,20 +25,22 @@ text-transform: uppercase;
 }
 
 .previewbaku {
+  margin-bottom: 5%;
   padding-bottom: 50%;
   background-image: url(../images/baku.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 }
   .previewbaku h1 {
     margin-left: 10%;
     padding-top: 10%;
-  }
+}
 
 .previewlondon {
+  margin-bottom: 5%;
   padding-bottom: 50%;
   background-image: url(../images/london.png);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 }
   .previewlondon h1 {
@@ -38,20 +48,21 @@ text-transform: uppercase;
     padding-top: 10%;
 }
 .previewmadrid {
+  margin-bottom: 5%;
   padding-bottom: 50%;
   background-image: url(../images/madrid.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
-  width: auto 100;
 }
   .previewmadrid h1 {
     margin-left: 10%;
     padding-top: 10%;
 }
 .previewrome {
+  margin-bottom: 5%;
   padding-bottom: 50%;
   background-image: url(../images/rome.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 }
   .previewrome h1 {
